changes to fix typos

--- a/appendix.tex
+++ b/appendix.tex
@@ -55,7 +55,7 @@
                 \column{0.55\textwidth}
                     \textbf{Kenyon and Sourcerer}
                     \begin{itemize}
-                      \item Defiens a databse schema for metadata and source code
+                      \item Defines a databse schema for metadata and source code
                       \item Provide access to the dataset via SQL
                     \end{itemize}
 
