--- a/approach.tex
+++ b/approach.tex
@@ -98,7 +98,7 @@
                 \begin{figure}
                     \centering
                     \includegraphics[scale=0.28]{figures/structure.png}
-                    \caption{Structure of an Candoia app}
+                    \caption{Structure of a Candoia app}
                 \end{figure}
         \end{columns}
         \end{frame}
@@ -160,7 +160,7 @@
                 \item Customization in Apps
                     \begin{itemize}
                         \item Concerned with customizing different part of the apps
-                        \item app customizations in Candoia are more focused in terms of findings the right component(s) for customizations
+                        \item App customizations in Candoia are more focused in terms of findings the right component(s) for customizations
                         \end{itemize}
             \begin{figure}
                 \centering
@@ -180,7 +180,7 @@
                     \begin{itemize}
                         \item Concerned with customizing different part of the apps
                         \item App customizations in Candoia are more focused in terms of findings the right component(s) for customizations
-                        \item Script based app, easire to customize
+                        \item Script based app, easier to customize
                     \end{itemize}
             \end{itemize}
         \end{frame}
@@ -249,7 +249,7 @@
             \frametitle{Chromium based Candoia frontend}
             \begin{itemize}
                 \item Candoia builds on the process architecture of Chromium, each window runs as a process
-                \item Process communica tes with controller process via Inter Process Communication
+                \item Process communicates with controller process via Inter Process Communication
                 \item Controller process mediates interaction between file system, window data etc. by exposing APIs.
                 \item An app can only access resources using exposed APIs.
             \end{itemize}
