--- a/evaluation.tex
+++ b/evaluation.tex
@@ -5,7 +5,7 @@
             \begin{itemize}
                 \item Applicability
                     \begin{itemize}
-                        \item our claim is that MSR tasks and hypotheses can be ex- pressed and evaluated using Candoia platform\'s capabilities.
+                        \item Our claim is that MSR tasks and hypotheses can be expressed and evaluated using Candoia platform\'s capabilities.
                     \end{itemize}
                 \item Adoptability
                     \begin{itemize}
