--- a/figures/adoptability1.tex
+++ b/figures/adoptability1.tex
@@ -75,8 +75,8 @@
 % & 6 & a & b & c & d & e & f & p & q & r & s & t \\ \hline
 \end{tabular}
 \end{adjustbox}
-\caption{\tiny{Compares LOC changes required for adopting apps from one project
-setting to another in Java and Candoia.}}
+\caption{Compares LOC changes required for adopting apps from one project
+setting to another in Java and Candoia.}
 \label{fig:adoptability}
 %}
 %\end{figure*}
