--- a/figures/customizability1.tex
+++ b/figures/customizability1.tex
@@ -59,6 +59,6 @@ M_{Visualize}$ & \inline{Total} & \inline{Boa} & \inline{JS} & \inline{HTML} &
 \hline
 \end{tabular}
 \end{adjustbox}
-\caption{\tiny{Compares LOC changes required for a number of customizations in Java and Candoia.}}
+\caption{Compares LOC changes required for a number of customizations in Java and Candoia.}
 \label{fig:customizability}
 \end{figure}
