--- a/figures/questions.tex
+++ b/figures/questions.tex
@@ -77,6 +77,7 @@
 %& \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}{\bf JQ  }}                                                         &JQuery     &     &       &\cellcolor[HTML]{C0C0C0}P           &PMD                                &                                &                                                             &\cellcolor[HTML]{C0C0C0}JE                                   &JEdit                                &                               &             &       &                   &                             &                               \\ \hline
 \end{tabular}
 }
-\caption{Several Candoia  apps with their lines of code in different languages and execution times (in seconds).}
+\caption{\tiny{Several Candoia  apps with their lines of code in different languages and
+execution times (in seconds).}}
 \label{table:questions}
 \end{figure}
