--- a/intro.tex
+++ b/intro.tex
@@ -1,18 +1,3 @@
-\section{Background}
-\subsection{MSR}
-    \begin{frame}
-    \frametitle{Mining Software Repository (MSR)}
-    Analysis of rich data available in software repositories such as version control, bug
-    tracking, source code, mailing list and organiation information.
-
-    \begin{itemize}
-        \item Significant contribution in Programming language design and Software engineering domains.
-        \item Impact of MSR tools can be increased if the process of building and widely distributing MSR tools is eased.
-        \footnote{Robles et.al, Replicating MSR:A study of the potential replicability of papers
-        published in the Mining Software Repositories proceedings, 2010}
-    \end{itemize}
-    \end{frame}
-
 \section{Acknowledgement}
 \subsection{Acknowledgement}
         \begin{frame}
@@ -31,8 +16,22 @@
             \end{itemize}
         \end{frame}
 
+\section{Background and Overview}
+\subsection{MSR}
+    \begin{frame}
+    \frametitle{Mining Software Repository (MSR)}
+    Analysis of rich data available in software repositories such as version control, bug
+    tracking, source code, mailing list and organization information.
 
-\section{Overview}
+    \begin{itemize}
+        \item Significant contribution in Programming language design and Software engineering domains.
+        \item Impact of MSR tools can be increased if the process of building and widely distributing MSR tools is eased.
+        \footnote{Robles et.al, Replicating MSR:A study of the potential replicability of papers
+        published in the Mining Software Repositories proceedings, 2010}
+    \end{itemize}
+    \end{frame}
+
+%\section{Overview}
     \begin{frame}
         \begin{itemize}
             \item Problem
