--- a/problem.tex
+++ b/problem.tex
@@ -87,7 +87,7 @@
 %\end{comment}
 
         \begin{frame}
-            \frametitle{How MSR tools are build?}
+            \frametitle{How MSR are tools build?}
             \begin{itemize}
                 \item MSR tools are build for specific project setting.
                 \item A project setting defines types and sources of various MSR artifacts
@@ -105,7 +105,7 @@
                             \item Source code of programming language(s)
                             \item Bug data from bug trackers
                             \item Project metadata
-                            \item users and teams data from forges
+                            \item Users and teams data from forges
                         \end{itemize}
                     \end{itemize}
                 \end{frame}
